Fixes scroll jump

--- a/src/scss/_display-controls.scss
+++ b/src/scss/_display-controls.scss
@@ -15,8 +15,6 @@
   &.with-border {
     box-shadow: 0 8px 6px -10px black;
     max-width: 75rem;
-    position: fixed;
-    width: 100%;
   }
 
   > div {
